--- a/babel.html
+++ b/babel.html
@@ -24,9 +24,7 @@
           Error message goes here.
       </div>
     </main>
-    <script src="https://unpkg.com/babel-standalone">
-
-    </script>
+    <script src="https://unpkg.com/babel-standalone"></script>
     <script type="text/babel" data-preset="latest">
     const getMessage = (name) => `Welcome ${name}!`
     const button = document.getElementById('submit')
