--- a/react.html
+++ b/react.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/5.1.0/mocha.min.css">
     <style media="screen">
       .messageBox{
         border:1px solid;
@@ -24,9 +25,12 @@
   </head>
   <body>
 <div id="content"></div>
+<div id="mocha"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/5.1.0/mocha.min.js"></script>
 <script type="text/babel" data-preset="react">
 const text = document.getElementById('content')
 class NameInput extends React.Component{
@@ -55,7 +59,7 @@ class NameInput extends React.Component{
     return(
       <div>
         <label>Name: <input ref="nameInput" type="text" /></label>
-        <button onClick={this.buttonClicked}>click me!</button>
+        <button name="inputBtn" onClick={this.buttonClicked}>click me!</button>
         <Message type={msg.type} message={msg.body} />
       </div>
     )
@@ -72,5 +76,42 @@ class Message extends React.Component{
 }
 ReactDOM.render(<NameInput/>,text)
 </script>
+<script trype="text/babel">
+  const assert = chai.assert
+  mocha.ui("bdd")
+  mocha.reporter("html")
+  describe("Example tests",()=>{
+    it("Proved that math works",()=>{
+      assert.equal(5,3+2, "Math works!")
+      assert.notEqual(6,3+2, "This is wrong!")
+      assert.closeTo(Math.PI, 3, .2, "Pi is close to 3")
+    })
+    it("found out component",()=>{
+      assert.isDefined(Message,"Message box is defined.")
+    })
+    it("let us test a function",()=>{
+      let myName="Bee"
+      const greet = (name)=> "Hello"+ myName +"!"
+      assert.include(greet(myName),myName,"greeting includes name.")
+    })
+  })
+  describe("Document tests",()=>{
+    it("Rendered an empty message box",()=>{
+      let msgBox=document.querySelector(".messageBox")
+      assert.isDefined(msgBox,"Message box is in the document")
+      assert.include(msgBox.classList.value,"hidden","Message box is hidden")
+      assert.equal(msgBox.innerText,"","Message box is empty")
+    })
+    it("Rendered an error when message box is empty",()=>{
+      let msgBox=document.querySelector(".messageBox")
+      let btn=document.getElementsByName("inputBtn")[0]
+      btn.click()
+      assert.include(msgBox.classList.value,"error","Message box type is error")
+    })
+  })
+  mocha.run()
+</script>
+
+
   </body>
 </html>
