--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
         </p>
       </div>
     </div>
+  </section>
+<script type="text/javascript" src="dist/bundle.js">
 
+</script>
   </body>
 </html>
